// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render the embed header 1`] = `
<div
  className=""
>
  <div
    className="c-dashboard__heading o-max-width"
  >
    <div
      className="o-max-width__inner"
    >
      <EmbedHeader />
    </div>
  </div>
</div>
`;

exports[`Header should render the main header 1`] = `
<styled.section
  data-test="header"
  isHomePage={false}
>
  <Styled(Header)
    className="styled-header"
    fullWidth={false}
    homeLink="/"
    navigation={
      <React.Fragment>
        <Memo(Connect(HeaderSearch)) />
        <MenuDefault
          data-test="header-menu-default"
          onExpand={[Function]}
          showAt="laptopM"
        />
        <MenuMobile
          data-test="header-menu-mobile"
          hideAt="laptopM"
          onExpand={[Function]}
        />
      </React.Fragment>
    }
    tall={false}
    title="Data en informatie"
  />
</styled.section>
`;

exports[`Header should render the print header 1`] = `
<div
  className=""
>
  <div
    className="c-dashboard__heading o-max-width"
  >
    <div
      className="o-max-width__inner"
    >
      <PrintHeader />
    </div>
  </div>
</div>
`;
